# imago

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json
asan/: suppressions.supp
benchmark/: Makefile  chart.py  chart_memory.py  docker-compose.yml  k6.js  parse_summary.py  run.sh  seed.sh
docker/: Dockerfile  docker-compose.yml
docs/: IMGPROXY_CPP_PORT_ANALYSIS.md  image-service-presentation.md  image-service-proposal-summary.md  image-service-slideshow.html  solution-proposal-image-service-v2.md  solution-proposal-image-service.md  solution-proposal-video-platform.md
docs/slides/: .gitignore  README.md  package-lock.json  package.json  slides.md
docs/slides/public/: charts
docs/slides/styles/: index.css
docs/superpowers/specs/: 2026-04-17-imgproxy-cpp-design.md
include/config/: AppConfig.hpp
include/controllers/: ConvertController.hpp  CropController.hpp  ResizeController.hpp  UploadController.hpp
include/infrastructure/s3/: S3Client.hpp
include/infrastructure/vips/: ImageProcessor.hpp  VipsImage.hpp
include/models/: HttpException.hpp  ImageRequest.hpp
include/plugins/: S3Plugin.hpp  UsecasePlugin.hpp  VipsPlugin.hpp
include/usecases/: ConvertUseCase.hpp  CropUseCase.hpp  ResizeUseCase.hpp  UploadUseCase.hpp
include/utils/: HttpUtils.hpp
playground/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
playground/src/: App.tsx  index.css
playground/src/components/: ExifSummary.tsx  FeatureForm.tsx  InputPreview.tsx  ResultPanel.tsx  S3Browser.tsx  SettingsDialog.tsx  SourcePicker.tsx  ThemeToggle.tsx
playground/src/lib/: imago.ts  s3.ts  settings.ts  theme.ts
src/: main.cpp
src/controllers/: ConvertController.cpp  CropController.cpp  ResizeController.cpp  UploadController.cpp
src/infrastructure/s3/: S3Client.cpp
src/infrastructure/vips/: ImageProcessor.cpp  VipsImage.cpp
src/plugins/: S3Plugin.cpp  UsecasePlugin.cpp  VipsPlugin.cpp
src/usecases/: ConvertUseCase.cpp  CropUseCase.cpp  ResizeUseCase.cpp  UploadUseCase.cpp
web-tool/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
web-tool/src/: App.tsx  index.css
web-tool/src/components/: FeatureForm.tsx  ResultPanel.tsx  SourcePicker.tsx  (+1 more)
(+14 files in other folders)
